[package]
name = "craft"
version = "0.1.0"
authors = ["superLish <s_lisheng@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
simple_logger = "1.0"
clap = "2.33.3"
tokio = { version = "0.3", features = ["full"] }
parity-crypto = { version = "0.6.2", features = ["publickey"] }
secp256k1 = "0.17"
rand = "0.7"
ethereum-types = "0.9.2"

[[bin]]
name = "client"
path = "./bin/client.rs"